--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>TD's Portfolio</title>
   </head>
   <body>
+    <!-- THis is jsut a test-->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
